<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="256dp"
              android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/width_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            />

        <TextView
            android:id="@+id/width_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/width_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/height_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/height_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/bombs_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            />

        <TextView
            android:id="@+id/bombs_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bombs"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/bombs_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>